--- a/src/vec_perm.adoc
+++ b/src/vec_perm.adoc
@@ -14,7 +14,7 @@ Encoding::
 ....
 {reg: [
   {bits: 7, name: 0x57, attr: 'OPMVV'},
-  {bits: 5, name: 'vd / rd', type: 7},
+  {bits: 5, name: 'rd', type: 7},
   {bits: 3, name: 2},
   {bits: 5, name: 0x0, attr: 'vs1'},
   {bits: 5, name: 'vs2', type: 2},
